  - #4296, Use `server_version_num` instead of parsing `version()` (Raúl Marín)
  - #4290, More robust geography distance (Paul Ramsey)
  - #4283, Avoid final point duplicates for circle stroking (Paul Ramsey)
  - #4314, ST_ClipByBox2D: Do not throw when the geometry is invalid (Raúl Marín)
  - #4313, #4307, PostgreSQL 12 compatibility (Laurenz Albe, Raúl Marín)



PostGIS 2.5.1
2018/11/18

 * Bug fixes *
  - #4183, ST_AsMVTGeom: Drop invalid geometries after simplification (Raúl Marín)
  - #4188, Avoid division by zero in kmeans (Raúl Marín)
  - #4189, Fix undefined behaviour in SADFWrite (Raúl Marín)
  - #4191, Fix undefined behaviour in ptarray_clone_deep (Raúl Marín)
  - #4020, Fix leftovers in topology upgrade from 2.1 (Sandro Santilli)
  - #4206, Fix support for PostgreSQL 12 dev branch (Laurenz Albe)
  - #4211, Fix ST_Subdivide for minimal exterior ring with minimal hole (Darafei
    Praliaskouski)
  - #3457, Fix raster envelope shortcut in ST_Clip (Sai-bot)
  - #4215, Use floating point compare in ST_DumpAsPolygons (Darafei Praliaskouski)
  - #4217, Fix ST_Subdivide crash on EMPTY in intermediate iterations (Darafei
    Praliaskouski)
  - #4223, ST_DistanceTree error for near parallel boxes (Paul Ramsey)
  - Schema qualify more functions for raster (Regina Obe)
  - #4216, Revert non-sliced box access (Paul Ramsey)
  - #2767, Documentation for AddRasterConstraint optional parameters (Sunveer Singh)
  - #4326, Allocate enough memory in gidx_to_string (Raúl Marín)
  - #4190, Avoid undefined behaviour in gserialized_estimate (Raúl Marín)


PostGIS 2.5.0
2018/09/23
WARNING: If compiling with PostgreSQL+JIT, LLVM >= 6 is required
Supported PostgreSQL versions for this release are:
PostgreSQL 9.4 - PostgreSQL 12 (in development)
GEOS >= 3.5

* New Features *
  - #1847, spgist 2d and 3d support for PG 11+
    (Esteban Zimányi and Arthur Lesuisse from Université Libre de Bruxelles (ULB),
      Darafei Praliaskouski)
  - #4056, ST_FilterByM (Nicklas Avén)