@@ -29,6 +29,7 @@ XXXX/XX/XX
   - #4283, Avoid final point duplicates for circle stroking (Paul Ramsey)
   - #4314, ST_ClipByBox2D: Do not throw when the geometry is invalid (Raúl Marín)
   - #4313, #4307, PostgreSQL 12 compatibility (Laurenz Albe, Raúl Marín)
+  - #4290, Schema qualify geometry casts in raster functions (Regina Obe)
 
 
 
